feat: improve request validation
